# cpp_rpg

./: CMakeLists.txt  README.md
include/: Hp.h
src/: Hp.cpp
